--- a/MapViewExamples/MapViewExamples/Info.plist
+++ b/MapViewExamples/MapViewExamples/Info.plist
@@ -22,6 +22,10 @@
 	<true/>
 	<key>MKDirectionsApplicationSupportedModes</key>
 	<array/>
+  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>Because</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Because</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
