Replaced coordinator in MapView with delegate in MapViewService

--- a/.swiftpm/xcode/xcshareddata/xcschemes/MapView.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/MapView.xcscheme
@@ -27,7 +27,31 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      systemAttachmentLifetime = "keepNever">
+      systemAttachmentLifetime = "keepNever"
+      codeCoverageEnabled = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "MapView"
+            BuildableName = "MapView"
+            BlueprintName = "MapView"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "MapViewTests"
+            BuildableName = "MapViewTests"
+            BlueprintName = "MapViewTests"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "B57C12BF267CAD0000088246"
+            BuildableName = "MapViewExamples.app"
+            BlueprintName = "MapViewExamples"
+            ReferencedContainer = "container:MapViewExamples/MapViewExamples.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
